--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Add your custom styles here */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -41,11 +40,16 @@ body {
     border-radius: 20px;
     width: 250px;
     padding: 10px;
+    padding-left: 20px;
+    
   }
   .clubs{
     width: 150px;
     padding: 20px;
   }
+
+
+
   footer {
     background-color: #6328a6;
     color: #fff;
